--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ## Basic Configuration
 
-baseurl = "https://shenoybr.github.io/hugo-goa-demo/" 
+baseurl = "https://sharp-knuth-18a3d0.netlify.com/" 
 builddrafts = false
 canonifyurls = false
 languageCode = "en-US"
