bugfix: updated twitter handle
Updated twitter handle in blog.

--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ keywords = "minimalist,blog,goa,hugo,developer"
 [params.social]
 github = "synflyn28"
 linkedin = "justinreid28"
-twitter = "synflyn28"
+twitter = "JustinReid28"
 email = "jlreid@alumni.unca.edu"
 
 ## Extras
