doc: Re-arranged Title
Re-arranged title for blog site.

--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ theme = "hugo-goa"
 ## Site Settings
 [params]
 author = "Justin Lynn Reid"
-intro = "Scientific Programmer, Data Analyst, & Meteorologist"
+intro = "Data Analyst, Scientific Programmer & Meteorologist"
 description = "Federal Contrator @ NOAA's National Centers for Environmental Information"
 authorimage = "headshot.jpeg"
 dateformat = "Jan 2, 2006"
